Fix deployment issues

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.profile{
+  margin-top: 5rem;
+}
+
 .param {
   width: 49%;
   min-height: 18rem;
@@ -32,7 +36,7 @@
         }
         .img {
           img {
-            left: 25%;
+            left: 50%;
           }
         }
         .bottom {
